plugins/groovy/testdata/highlighting/pre30/lambdas.groovy
foo(() <error descr="Lambdas are not supported in current version">-></error> bar)
foo(() <error descr="Lambdas are not supported in current version">-></error> {})
foo(it <error descr="Lambdas are not supported in current version">-></error> it)
